--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "name": "kill covid-19",
   "short_name": "kill covid-19",
   "lang": "en-US",
-  "start_url": "./kill-covid-19.html",
+  "start_url": "./index.html",
   "display": "standalone",
   "background_color": "#333333",
   "theme_color": "#333333",
@@ -10,7 +10,7 @@
   "icons": [
     {"src": "icons/icon_128.png", "sizes": "128x128", "type": "image/png"},
     {"src": "icons/icon_144.png", "sizes": "144x144", "type": "image/png"},
-    {"src": "icons/icon_152.png", "sizes": "152x152", "type": "image/png"}, 
+    {"src": "icons/icon_152.png", "sizes": "152x152", "type": "image/png"},
     {"src": "icons/icon_192.png", "sizes": "192x192", "type": "image/png"},
     {"src": "icons/icon_256.png", "sizes": "256x256", "type": "image/png"},
     {"src": "icons/icon_512.png", "sizes": "512x512", "type": "image/png"}
